# GDB

./: .gitignore  HARBOR_ADAPTER.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  new_benchmark.yml
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md
integrations/helm/: README.md  pyproject.toml
integrations/helm/src/gdb_helm/: __init__.py  _benchmark_info.py  metrics.py  run_specs.py  scenarios.py
parity/: README.md  _run_upstream_parity.sh  claude-code-setup.sh  run_parity.sh
scripts/: README.md  _nima_rescore_runs.py  build_verify_dataset.py  download_data.py  merge_parity_results.py  normalize_template_data.py  run_benchmarks.py  upload_to_hf.py
src/design_benchmarks/: __init__.py  __main__.py  base.py  registry.py  runner.py
src/design_benchmarks/evaluation/: __init__.py  reporting.py  tracker.py
src/design_benchmarks/inference/: __init__.py  api_batch_runners.py  batch.py
src/design_benchmarks/metrics/: __init__.py
src/design_benchmarks/models/: __init__.py  local_models.py
src/design_benchmarks/tasks/: __init__.py  layout.py  temporal.py
src/design_benchmarks/utils/: __init__.py  data_helpers.py  text_helpers.py
src/gdb/: __init__.py  __main__.py  base.py  cli.py  hf.py  registry.py  runner.py  suites.py
src/gdb/_verify_data/: README.md
src/gdb/evaluation/: __init__.py
src/gdb/inference/: __init__.py  api_batch_runners.py  (+2 more)
tests/: conftest.py  test_cli_helpers.py  test_cli_integration.py  test_suites.py
(+36 files in other folders)
